# offline_vio_tool

./: README.md  VIS_GUIDE.md  demo_visualize.sh  generate_settings.py  requirements.txt  run_vio.py
cpp/: CMakeLists.txt  rgbd_inertial_offline.cc
vio_tool/: __init__.py  alignment.py  board_detection.py  data_loader.py  imu_converter.py  orbslam_interface.py  pose_math.py  realtime_visualizer.py  visualization.py
